* Edit to css/lorekeeper.css => added .modal-backdrop.show  {visibility: hidden} (pluss other minor things in prep of solving) as a temporary fix to backdrop for reply/edit/delete etc.. modals backdrop covering the entire page * Changed training hub in NAV according to #"Navigation bar link updates" * Changed the default behaviour of details in prompts to be SHOW instead of HIDDEN (Also changed text from "show details" to "toggle details visibility" * Also added edit buttons to when you view prompts directly (ie. prompts/{number})

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -539,6 +539,14 @@ p {
 .tooltip-inner {
     max-width: 350px !important;
 }
+.modal-backdrop.show  {
+	visibility: hidden;
+    z-index: 50;
+}
+
+.modal-dialog {
+    z-index: 100;
+}
 
 .nav-tabs .nav-link.active {
     background-color: transparent;
